fix minor layout bugs. #50

--- a/client/assets/css/components/layout.styl
+++ b/client/assets/css/components/layout.styl
@@ -9,10 +9,6 @@
   display: flex
   min-height: 100vh
   flex-direction: column
-
-.page-wrapper,
-.page-wrapper-expanded
-  flex: 1
   
 .page,
 .page-wrapper,
@@ -27,6 +23,7 @@
   overflow-y: scroll
   
 .page-heading
+  margin-bottom: $ui-spacing
   margin-left: $ui-spacing-double
 
 // Sidebar reappearance and page shifting  
